updated ConvertKit thank you page and added links to Freelance Library

--- a/march-update/gift-thank-you/index.html
+++ b/march-update/gift-thank-you/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aleia Walker</title>
-        <meta name="description" content="Aleia Walker is a resource library for freelancers and side hustlers looking to take their side hustles full-time.">
-        <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development,resources, freelance library, freelance plan, atlanta, remote" >
+        <title>Aleia Walker | Web Developer and Freelance Mentor</title>
+        <meta name="description" content="Thank you page for email list subscriber.">
+        <meta name="keywords" content="aleia walker, aleia, freelance, freelancer, web design, web development, resources, freelance library, freelance plan, atlanta, remote" >
         <meta name="author" content="Aleia Walker">
         <meta name="p:domain_verify" content="26747e1e564f614a66efbbd3db924195"/> <!-- pinterest -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,13 +15,13 @@
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
 
         <!-- Place favicon.ico in the root directory -->
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="../favicon.ico">
 
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../css/main.css">
         <link rel="stylesheet" href="../css/font-awesome.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
 
         <!-- Facebook Pixel Code -->
         <script>
@@ -41,58 +41,43 @@
 
 
     </head>
-    <body id="links">
-    <div class="links-wrapper">
-        <figure>
-            <img src="../img/aleia-6.jpg" alt="aleia walker blogger freelancer freelance plan">
-        </figure>
+    <body id="gift-thank-you">
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-        <h1>Aleia Walker</h1>
+        <!-- Add your site or application content here -->
+        <div class="gift-wrapper">
+        <header>
+            <figure>
+                <a href="https://aleiawalker.com" target="_blank"><img src="../img/logo.svg" alt="aleia walker logo"></a>
+            </figure>
+            <div class="header-content">
+                <div>
+                    <h1>Thank you!</h1>
+                    <p>Check your inbox for the link to your download, "5 Tips on Pricing as a Freelancer" in a few minutes.</p>
+                    <p>But first, press play!</p>
+                </div>  
+                <iframe src="https://player.vimeo.com/video/219056079" width="640" height="427" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-        <article>
-            <div> <!-- 31 Things Post -->
-                <p><a href="https://www.aleiawalker.com/blog/boss-ladies-invested/" target="_blank">31 Things Boss Ladies Wish they Invested in Earlier in their Businesses</a></p>
+                <!-- <div>
+                    <h1>Thank you, you're now registered!</h1>
+                    <p>Check your inbox for the link to your download in a few minutes. If you want access to more like this, join the Freelance Library.</p>
+                    <p>The Freelance Library, is a collection of resource guides designed to make it easy for freelancers to get help.</p>
+                </div> -->
             </div>
-            <div> <!-- Secret Project Research -->
-                <p><a href="https://aleia.typeform.com/to/ZO8MD4" target="_blank">Secret Project Research</a></p>
-            </div>
-            <div> <!-- Freelance Library -->
-                <p><a href="http://bit.ly/freelance-library" target="_blank">The Freelance Library</a></p>
-            </div>
-            <div> <!-- Blog -->
-                <p><a href="https://www.aleiawalker.com/blog" target="_blank">The Blog</a></p>
-            </div>
-            <!-- <div>  Consultation Calls 
+        </header>
 
-                 <p><a href="bit.ly/aleia-chat" target="_blank">Schedule Consultation Call</a></p> 
-            </div> -->
-            <div> <!-- AW.COM -->
-                <p><a href="http://bit.ly/aleiawalker" target="_blank">The Website</a></p>
+        <section class="fp-text">
+            <div>
+                <button>
+                    <p><a href="https://aleia.typeform.com/to/ZO8MD4">Help a girl out!</a></p>
+                </button>
             </div>
-            <div> <!-- Freelance Plan -->
-                <p><a href="http://bit.ly/freelance-plan" target="_blank">The Freelance Plan</a></p>
-            </div>
-            <div> <!-- OPT-IN Find your tribe -->
-                <p><a href="http://bit.ly/find-your-tribe-aw" target="_blank">[FREEBIE] Don't Work Alone, Find your Tribe</a></p>
-            </div>
-            <div> <!-- OPT-IN Fight your fears -->
-                <p><a href="http://bit.ly/fight-your-fears" target="_blank">[FREEBIE] Fight your Fears: How to Escape your 9 to 5 by Building your Side Hustle</a></p>
-            </div>
-            <div> <!-- OPT-IN 9 things -->
-                <p><a href="http://bit.ly/9-things-website" target="_blank">[FREEBIE]9 Things you Must Have to Build a Website that Works for You</a></p>
-            </div>
-            <div> <!-- Twitter -->
-                <p><a href="https:/www.twitter.com/msaleia" target="_blank">Twitter</a></p>
-            </div>
-            <div> <!-- Instagram -->
-                <p><a href="https:/www.instagram.com/msaleia" target="_blank">Instagram</a></p>
-            </div>
-            <div> <!-- Pinterest -->
-                <p><a href="http://bit.ly/pinterest-aleia" target="_blank">Pinterest</a></p>
-            </div>
-        </article>
-    </div>
-    <script>
+        </section>
+        </div>
+
+        <script>
             fbq('track', 'ViewContent');
             fbq('track', 'Lead');
         </script>
