--- a/march-update/index.html
+++ b/march-update/index.html
@@ -59,6 +59,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="http://bit.ly/the-freelance-library">
+                            Freelance Library
+                        </a>
+                    </li>
+                    <li>
                         <a href="freelance-plan/">
                             Freelance Plan
                         </a>
@@ -153,14 +158,14 @@
                                             You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming acd sdfsdand more time creating. 
                                         </p>
                                         <button>
-                                            <a href="freelance-library/">Get your library card.</a>
+                                            <a href="http://bit.ly/the-freelance-library">Get your library card.</a>
                                         </button>
                                     </div>
                                 </div>
                             </article>
                             <article class="offerings-item" id="hack-your-hustle">
                                 <div class="offerings-items-container">
-                                    <h3>...quitting your 9 to 5 without going back to school.</h3>
+                                    <h3>...quitting your day job without going back to school.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
                                             You don't have the time, energy, or money to start your career over by traditional means. You need a new career and don't want to spend forever getting there. You want to work together someone who took their side hustle full-time so they can show you the path to do the same for yourself - in less time.  
