--- a/march-update/work-with-me/index.html
+++ b/march-update/work-with-me/index.html
@@ -129,28 +129,28 @@
                                     <h3>...freelance resources.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're working on figuring out what you want your side hustle to be or trying to learn skills to be better at your craft.    
+                                            You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming acd sdfsdand more time creating. 
                                         </p>
                                         <button>
-                                            <a href="resources/">Want more resources?</a>
+                                            <a href="http://bit.ly/the-freelance-library" target="_blank">Get your library card</a>
                                         </button>
                                     </div>
                                 </div>
                             </article>
                             <article class="offerings-item" id="hack-your-hustle">
                                 <div class="offerings-items-container">
-                                    <h3>...making your plan to take your side hustle to full-time plan.</h3>
+                                    <h3>...quitting your day job without going back to school.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're pretty sure that you know what you want your side hustle to be but you need help making a plan to quit your 9 to 5 job? You want to work together someone who took their side hustle full-time to build your side hustle education, implementation, and marketing plan.  
+                                            You don't have the time, energy, or money to start your career over by traditional means. You need a new career and don't want to spend forever getting there. You want to work together someone who took their side hustle full-time so they can show you the path to do the same for yourself - in less time.  
                                         </p>
                                         <button>
-                                            <a href="hack-your-hustle/">Ready to make your plan?</a>
+                                            <a href="../freelance-plan/" target="_blank">Ready to make your plan?</a>
                                         </button>
                                     </div>
                                 </div>
                             </article> 
-                            <article class="offerings-item" id="squarespace-in-a-box">
+                            <!-- <article class="offerings-item" id="squarespace-in-a-box">
                                 <div class="offerings-items-container">
                                     <h3>...what to put on your website.</h3>
                                     <div class="offerings-item-wrapper">
@@ -162,7 +162,7 @@
                                         </button>
                                     </div>
                                 </div>
-                            </article> 
+                            </article>  -->
                         </div> <!-- offerings container wrapper -->
                     </div>
                 </section>
