working on resources page

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -69,6 +69,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="resources/">
+                            Resources
+                        </a>
+                    </li>
+                    <li>
                         <a href="blog/">
                             Blog
                         </a>
@@ -97,8 +102,8 @@
                         </li>
                         <li class="spacer"></li>
                         <li>
-                            <a href="portfolio/">
-                                Portfolio
+                            <a href="resources/">
+                                Resources
                             </a>
                         </li>
                         <li class ="spacer"></li>
