--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -50,17 +50,17 @@
         <h1>Aleia Walker</h1>
 
         <article>
+            <div> <!-- Freelance Library -->
+                <p><a href="http://bit.ly/the-freelance-library" target="_blank">The Freelance Library</a></p>
+            </div>
             <div> <!-- 31 Things Post -->
-                <p><a href="https://www.aleiawalker.com/blog/boss-ladies-invested/" target="_blank">31 Things Boss Ladies Wish they Invested in Earlier in their Businesses</a></p>
+                <p><a href="http://www.aleiawalker.com/blog/boss-ladies-invested/" target="_blank">31 Things Boss Ladies Wish they Invested in Earlier in their Businesses</a></p>
             </div>
             <div> <!-- Secret Project Research -->
                 <p><a href="https://aleia.typeform.com/to/ZO8MD4" target="_blank">Secret Project Research</a></p>
             </div>
-            <div> <!-- Freelance Library -->
-                <p><a href="http://bit.ly/freelance-library" target="_blank">The Freelance Library</a></p>
-            </div>
             <div> <!-- Blog -->
-                <p><a href="https://www.aleiawalker.com/blog" target="_blank">The Blog</a></p>
+                <p><a href="http://www.aleiawalker.com/blog" target="_blank">The Blog</a></p>
             </div>
             <!-- <div>  Consultation Calls 
 
