--- a/march-update/resources/index.html
+++ b/march-update/resources/index.html
@@ -31,13 +31,32 @@
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-            <header>
-                <figure class="logo-il">
-                    <a href="../"><img src="../img/logo.svg" alt="aleia walker logo"></a>
+            <header class="page-header">
+                <figure class="logo">
+                    <a href="#"><img src="../img/logo.svg"></a>
                 </figure>
-                <h2>
-                    The Freelance Library
-                </h2>
+                <ul id="resources-menu" class="main-menu-home">
+                    <li>
+                        <a href="../about/" target="_blank">
+                            About Me
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://bit.ly/the-freelance-library" target="_blank">
+                            Freelance Library
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Resources
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.aleiawalker.com/blog/" target="_blank">
+                            Blog
+                        </a>
+                    </li>
+                </ul>
             </header>
             <section class="interest-list-description">
                 <div class="il-header-description">
@@ -45,11 +64,9 @@
                     When you first decide to add a side hustle to your hectic life, there are so many things to figure out. You can spend all day skimming the web, or you can skip all of the searching and go directly to the goods.
                 </p>
 
-                <h2>What is the Freelance Library?</h2>
-                <p>It's a collection of resource guides and ebooks designed to cut your research time in half and give you all of the freelance resources that you've been looking for, in one place.</p>
 
 
-                <h2>What you'll get...</h2>
+                <h2>My favorite...digital tools</h2>
                 <p>Guides to find all of the best freelance resources on...</p>
                 <ul>
                     <li>Choosing the best side hustle for you</li>
@@ -62,12 +79,42 @@
                     <li>...and much</li>
                 </ul>
                     
-                <h2>Who is this for?</h2>
+                <h2>My favorite...physical tools</h2>
                 <p>You're a creative trying to choose a side hustle. Or a side hustler trying to learn skills to be better at your craft.</p>
+
+
+                <h2>My favorite...wishlist items</h2>
+                <p>Feeling generous and want to gift my inbox? Jokes aside, these are the embraceable bits for my next level.</p>
+
+                <!-- Apple Macbook Pro w/ all the bits -->
+
+                <h2>My favorite ... reads</h2>
+                <p>You're a creative trying to choose a side hustle. Or a side hustler trying to learn skills to be better at your craft.</p>
+
+                <h2>My favorite...podcasts</h2>
+
+                <h2>My favorite...ways to self-care</h2>
+                <p>It's a collection of resource guides and ebooks designed to cut your research time in half and give you all of the freelance resources that you've been looking for, in one place.</p>
+
+
+
+                <h2>What's on the bar</h2>
+
+                <!-- Mojito, dark & stormy, Appleton Reserve, Plantation 3 Stars, Guinness when I'm feeling frisky... -->
+
+                <!-- Guacamole because avocados over everything -->
+
+                <h2> Don't forget about these </h2>
+
+<!--                 add in favorite opt-in's inlcuding mock-ups  -->
+
+                    opt - in 1 - pricing projects as a freelancer
+                    opt - in 2 - find a tribe
+                    number 3 freelance library
 
                 </div>
             </section>
-            <section class="interest-list-description" id="wip-block-r">
+            <!-- <section class="interest-list-description" id="wip-block-r">
                 <div class="il-header-description" id="aleia-bio-sales-pages">
                     <figure class="familiar-photo">
                         <img src="../img/aleia-excited.png">
@@ -96,7 +143,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="convertkit">
                 <script async id="_ck_184335" src="https://forms.convertkit.com/184335?v=6"></script>
                 <aside>
