added email redirects

--- a/march-update/about/index.html
+++ b/march-update/about/index.html
@@ -141,9 +141,9 @@
 
                         <p>In your spare time, you're struggling to create a website that truly reflects you and all you can do.</p>
 
-                        <p class="about-p-accent">I can help with that.</p>
+                        <p class="about-p-accent">I can help with that. </p>
 
-                        <p>I’m Aleia, Freelance Frontend Developer + Full-time Side Hustler.</p>
+                        <p style="font-size: 1.25rem;">I’m Aleia, a Web Developer + Freelance Mentor (and full-time side hustler).</p>
                     </div>
 
                     <figure class="about-aside-photo"></figure>
