updated links file with influencers corner links

--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -50,6 +50,12 @@
         <h1>Aleia Walker</h1>
 
         <article>
+            <div> <!-- Influencers Corner Success Guide-->
+                <p><a href="http://bit.ly/influencers-corner-success-guide" target="_blank">Get your Influencers Corner Success Guide</a></p>
+            </div>
+            <div> <!-- Influencers Corner -->
+                <p><a href="http://bit.ly/influencers-corner" target="_blank">Influencers Corner: Coaches and Mentors Edition</a></p>
+            </div>
             <div> <!-- Freelance Library -->
                 <p><a href="http://bit.ly/the-freelance-library" target="_blank">The Freelance Library</a></p>
             </div>
