added influencers corner to homepage

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -59,22 +59,22 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://bit.ly/the-freelance-library">
+                        <a href="http://bit.ly/the-freelance-library" target="_blank">
                             Freelance Library
                         </a>
                     </li>
                     <li>
-                        <a href="freelance-plan/">
-                            Freelance Plan
+                        <a href="http://bit.ly/influencers-corner" target="_blank">
+                            Influencers Corner
                         </a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a href="resources/">
                             Resources
                         </a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a href="blog/">
+                        <a href="blog/" target="_blank">
                             Blog
                         </a>
                     </li>
@@ -101,11 +101,11 @@
                             </a>
                         </li>
                         <li class="spacer"></li>
-                        <li>
+                        <!-- <li>
                             <a href="resources/">
                                 Resources
                             </a>
-                        </li>
+                        </li> -->
                         <li class ="spacer"></li>
                         <li>
                             <a href="blog/">
@@ -130,24 +130,25 @@
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                <span class="welcome-span">I am a web developer + <a href="https://www.bit.ly/freelance-plan">and freelance mentor</a> + instructor at Skillcrush</span>.
+                                <span class="welcome-span">I am a web developer + freelance mentor + instructor at Skillcrush</span>.
                             </p>
                         </div> <!-- welcome info wrapper -->
 
                         <div class="opt-in-divider"></div>
                     
                         <div class="opt-in-tagline">
-                            <p>... and I help freelancers quit their day jobs.</p>
-                            <p>Stop working alone in a bubble and ask for help. Download the guide to find your tribe.</p>
+                            <p>... and I help creatives quit their day jobs to build the career of their dreams.</p>
+                            <p>Curious about how mentoring and coaching can work for you? Head over to the <a href="http://bit.ly/influencers-corner" target="_blank">Influencers Corner</a> to checout out what some bosses have to say about it.</p>
+<!--                             <p>Stop working alone in a bubble and ask for help. Download the guide to find your tribe.</p> -->
                         </div>
                     </aside>
                     <aside class="welcome-right">
                         <figure class="opt-in">
-                            <img src="img/freelance-plan-how-to-find-your-tribe-cover.jpg" alt="freelancing how to find your tribe">
+                            <img src="img/aleia-walker-influencers-corner-success-guide.jpg" alt="aleia walker, influencers corner, success guide, freelancing, freelance, mentorship">
                         </figure>
                         <div class="email-signup">
                             <!-- Begin ConvertKit Signup Form -->
-                            <script async id="_ck_204555" src="https://forms.convertkit.com/204555?v=6"></script>
+                            <script async id="_ck_234271" src="https://forms.convertkit.com/234271?v=6"></script>
                         </div>
                     </aside> <!-- welcome right end -->
                 </section>
@@ -170,6 +171,19 @@
                             </article>
                             <article class="offerings-item" id="hack-your-hustle">
                                 <div class="offerings-items-container">
+                                    <h3>...building your tribe from the top up.</h3>
+                                    <div class="offerings-item-wrapper">
+                                        <p>
+                                            Have you ever wondered if having a coach can impact your business? The answer is YES, but don't just take my word for it. I asked 11 influencers how having a coach impacted their business and they answered. On video. Sign-up to get access to the videos and I'll see you inside of the Influencers Corner.
+                                        </p>
+                                        <button>
+                                            <a href="http://bit.ly/influencers-corner" target="_blank">Curious about coaching + your business?</a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </article> 
+                            <!-- <article class="offerings-item" id="hack-your-hustle">
+                                <div class="offerings-items-container">
                                     <h3>...quitting your day job without going back to school.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
@@ -180,7 +194,7 @@
                                         </button>
                                     </div>
                                 </div>
-                            </article> 
+                            </article>  -->
                             <article class="offerings-item" id="the-blog">
                                 <div class="offerings-items-container">
                                     <h3>...freelance tips.</h3>
