updated links to include you are a badass + added tribe calls to homepage

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -64,8 +64,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="http://bit.ly/influencers-corner" target="_blank">
-                            Influencers Corner
+                        <a href="http://bit.ly/tribe-calls-info" target="_blank">
+                            Tribe Calls
                         </a>
                     </li>
 <!--                     <li>
@@ -137,18 +137,18 @@
                         <div class="opt-in-divider"></div>
                     
                         <div class="opt-in-tagline">
-                            <p>... and I help creatives quit their day jobs to build the career of their dreams.</p>
-                            <p>Curious about how mentoring and coaching can work for you? Head over to the <a href="http://bit.ly/influencers-corner" target="_blank">Influencers Corner</a> to checout out what some bosses have to say about it.</p>
+                            <p>... and I help creatives quit their day jobs to build the career of their dreams,</p>
+                            <p>Interested in accelerating the jump between your day job and creative career? Check out <a href="http://bit.ly/influencers-corner" target="_blank">Tribe Calls</a>, a three-month group mentorship program.</p>
 <!--                             <p>Stop working alone in a bubble and ask for help. Download the guide to find your tribe.</p> -->
                         </div>
                     </aside>
                     <aside class="welcome-right">
                         <figure class="opt-in">
-                            <img src="img/aleia-walker-influencers-corner-success-guide.jpg" alt="aleia walker, influencers corner, success guide, freelancing, freelance, mentorship">
+                            <img src="img/tribe-calls-intro-guide-cover.jpg" alt="aleia walker, influencers corner, success guide, freelancing, freelance, mentorship, mentor, tribe, community">
                         </figure>
                         <div class="email-signup">
                             <!-- Begin ConvertKit Signup Form -->
-                            <script async id="_ck_234271" src="https://forms.convertkit.com/234271?v=6"></script>
+                            <script async id="_ck_243954" src="https://forms.convertkit.com/243954?v=6"></script>
                         </div>
                     </aside> <!-- welcome right end -->
                 </section>
