--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -50,21 +50,30 @@
         <h1>Aleia Walker</h1>
 
         <article>
-            <div> <!-- Influencers Corner Success Guide-->
-                <p><a href="http://bit.ly/influencers-corner-success-guide" target="_blank">Get your Influencers Corner Success Guide</a></p>
+            <div> <!-- Tribe Calls Info -->
+                <p><a href="http://bit.ly/tribe-calls-info" target="_blank">Tribe Calls Information Guide</a></p>
             </div>
+            <!-- <div> 
+                <p><a href="http://bit.ly/influencers-corner-success-guide" target="_blank">Get your Influencers Corner Success Guide</a></p>
+            </div> -->
             <div> <!-- Influencers Corner -->
                 <p><a href="http://bit.ly/influencers-corner" target="_blank">Influencers Corner: Coaches and Mentors Edition</a></p>
             </div>
             <div> <!-- Freelance Library -->
                 <p><a href="http://bit.ly/the-freelance-library" target="_blank">The Freelance Library</a></p>
             </div>
+            <div> <!-- Watercolor Bootcamp -->
+                <p><a href="http://watercolorbootcamp.teachable.com/p/watercolor-bootcamp/?affcode=139139_usao-zvk" target="_blank">Watercolor Bootcamp</a></p>
+            </div>
             <div> <!-- 31 Things Post -->
                 <p><a href="http://www.aleiawalker.com/blog/boss-ladies-invested/" target="_blank">31 Things Boss Ladies Wish they Invested in Earlier in their Businesses</a></p>
             </div>
-            <div> <!-- Secret Project Research -->
-                <p><a href="https://aleia.typeform.com/to/ZO8MD4" target="_blank">Secret Project Research</a></p>
+            <div> <!-- Badass Book -->
+                <p><a href="http://amzn.to/2uD2iu4" target="_blank">You're a Badass at Making Money - Amazon</a></p>
             </div>
+<!--             <div> Secret Project Research
+                <p><a href="https://aleia.typeform.com/to/ZO8MD4" target="_blank">Secret Project Research</a></p>
+            </div> -->
             <div> <!-- Blog -->
                 <p><a href="http://www.aleiawalker.com/blog" target="_blank">The Blog</a></p>
             </div>
