final commit before WordPress update

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -143,12 +143,18 @@
                         </div>
                     </aside>
                     <aside class="welcome-right">
-                        <figure class="opt-in">
+                        <!-- <figure class="opt-in">
                             <img src="img/tribe-calls-intro-guide-cover.jpg" alt="aleia walker, influencers corner, success guide, freelancing, freelance, mentorship, mentor, tribe, community">
-                        </figure>
-                        <div class="email-signup">
+                        </figure> -->
+                        <!-- <div class="email-signup"> -->
                             <!-- Begin ConvertKit Signup Form -->
-                            <script async id="_ck_243954" src="https://forms.convertkit.com/243954?v=6"></script>
+                            <!-- <script async id="_ck_243954" src="https://forms.convertkit.com/243954?v=6"></script> -->
+                        <!-- </div> -->
+                        <div>
+                            <h2>Are you ready to take your creative biz to the next level?</h2>
+                            <button>
+                                <a href="https://www.tryinteract.com/share/quiz/598f796f19a515001103e11c" target="_blank">Take the quiz + find out</a>
+                            </button>
                         </div>
                     </aside> <!-- welcome right end -->
                 </section>
@@ -161,23 +167,23 @@
                                     <h3>...finding freelance resources.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming acd sdfsdand more time creating. 
+                                            You're a creative trying to quit your day job but spend more time finding resources on Google than you do actually implementing what you find. The Freelance Library hand delivers premium sourced resources to you every month - so you can spend less time consuming and more time creating. 
                                         </p>
                                         <button>
-                                            <a href="http://bit.ly/the-freelance-library">Get your library card.</a>
+                                            <a href="http://bit.ly/the-freelance-library">Get your library card</a>
                                         </button>
                                     </div>
                                 </div>
                             </article>
                             <article class="offerings-item" id="hack-your-hustle">
                                 <div class="offerings-items-container">
-                                    <h3>...building your tribe from the top up.</h3>
+                                    <h3>...building your creative community.</h3>
                                     <div class="offerings-item-wrapper">
                                         <p>
-                                            Have you ever wondered if having a coach can impact your business? The answer is YES, but don't just take my word for it. I asked 11 influencers how having a coach impacted their business and they answered. On video. Sign-up to get access to the videos and I'll see you inside of the Influencers Corner.
+                                            Do you realize you don't have to hate what you do or figure out how to quit your day job all on your own? If you dream of having a community of creative entrepreneurs that get you and your business and advice from someone who has been there and done that, check out Tribe Calls, a 3-month group mentorship program from creatives.
                                         </p>
                                         <button>
-                                            <a href="http://bit.ly/influencers-corner" target="_blank">Curious about coaching + your business?</a>
+                                            <a href="http://bit.ly/tribe-calls-info" target="_blank">Join the Tribe</a>
                                         </button>
                                     </div>
                                 </div>
@@ -203,7 +209,7 @@
                                             You're not ready to jump head first into a mentorship package, a la the Freelance Plan but you do want a deeper understanding of all things freelance.
                                         </p>
                                         <button>
-                                            <a href="blog/">Read the blog.</a>
+                                            <a href="blog/">Read the blog</a>
                                         </button>
                                     </div>
                                 </div>
