--- a/march-update/links/index.html
+++ b/march-update/links/index.html
@@ -56,8 +56,17 @@
             <!-- <div> 
                 <p><a href="http://bit.ly/influencers-corner-success-guide" target="_blank">Get your Influencers Corner Success Guide</a></p>
             </div> -->
+            <div> <!--Quiz -->
+                <p><a href="https://www.tryinteract.com/share/quiz/598f796f19a515001103e11c" target="_blank">Dear Creative, are you ready to your freelance biz to the next level? [Quiz]</a></p>
+            </div>
             <div> <!-- Influencers Corner -->
                 <p><a href="http://bit.ly/influencers-corner" target="_blank">Influencers Corner: Coaches and Mentors Edition</a></p>
+            </div>
+            <div> <!-- OPT-IN Fight your fears -->
+                <p><a href="http://bit.ly/fight-your-fears" target="_blank">[FREEBIE] How to Find your Quit Number Worksheet</a></p>
+            </div>
+            <div> <!-- OPT-IN Fight your fears -->
+                <p><a href="http://bit.ly/fight-your-fears" target="_blank">[FREEBIE] How to Find your Quit Number Worksheet</a></p>
             </div>
             <div> <!-- Freelance Library -->
                 <p><a href="http://bit.ly/the-freelance-library" target="_blank">The Freelance Library</a></p>
@@ -90,9 +99,7 @@
             <div> <!-- OPT-IN Find your tribe -->
                 <p><a href="http://bit.ly/find-your-tribe-aw" target="_blank">[FREEBIE] Don't Work Alone, Find your Tribe</a></p>
             </div>
-            <div> <!-- OPT-IN Fight your fears -->
-                <p><a href="http://bit.ly/fight-your-fears" target="_blank">[FREEBIE] Fight your Fears: How to Escape your 9 to 5 by Building your Side Hustle</a></p>
-            </div>
+            
             <div> <!-- OPT-IN 9 things -->
                 <p><a href="http://bit.ly/9-things-website" target="_blank">[FREEBIE]9 Things you Must Have to Build a Website that Works for You</a></p>
             </div>
